[tool.poetry]
name = "libthumbor"
version = "2.0.2"
description = "libthumbor is the python extension to generate thumbor URLs"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
readme = "README.md"
keywords = ["imaging", "face", "detection", "feature", "thumbor", "thumbnail", "imagemagick", "pil", "opencv"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
six = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-tldr = "^0.2.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pylint = "^2.13.4"
preggy = "^1.4.4"
pytest-cov = "^3.0"
django = "^3.2.14"
coverage = "^6.3.2"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
