[tool.poetry]
name = "libthumbor"
version = "2.0.2"
description = "libthumbor is the python extension to generate thumbor URLs"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
readme = "README.md"
keywords = ["imaging", "face", "detection", "feature", "thumbor", "thumbnail", "imagemagick", "pil", "opencv"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
pytest-tldr = "^0.2.1"
black = "^26.3.1"
flake8 = "^7.1.2"
isort = "^5.10.1"
pylint = "^3.3.5"
preggy = "^1.4.4"
pytest-cov = "^3.0"
django = "^4.2"
coverage = "^6.3.2"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
