[tool.poetry]
name = "libthumbor"
version = "2.0.2"
description = "libthumbor is the python extension to generate thumbor URLs"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
readme = "README.md"
keywords = ["imaging", "face", "detection", "feature", "thumbor", "thumbnail", "imagemagick", "pil", "opencv"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
six = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-tldr = "^0.2.6"
black = "^26.3.1"
flake8 = "^7.3.0"
isort = "^7.0.0"
pre-commit = "^4.5.1"
pylint = "^4.0.5"
preggy = "^1.4.4"
pytest-cov = "^7.0.0"
django = "^5.2.12"
coverage = "^7.13.4"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
